# Gorzenautonomy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deep-research-report.md  docker-compose.sim.yml  docker-compose.yml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
backend/: pyproject.toml  pyrightconfig.json  requirements-lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_prediction_validation.py  003_mission_drafts_user_sub.py  004_referential_integrity.py
backend/src/gorzen/: __init__.py  config.py  units.py
backend/src/gorzen/api/: app.py  deps.py  limiter.py  observability.py
backend/src/gorzen/api/routers/: audit.py  auth.py  calibration.py  catalog.py  envelope.py  environment.py  execution.py  mission.py  mission_plan.py  predictions.py  telemetry.py  telemetry_logs.py  twin.py  validation.py
backend/src/gorzen/calibration/: battery_life.py  bayesian.py  calibration_missions.py  posterior_store.py  telemetry_ingest.py
backend/src/gorzen/data/: __init__.py  lipo.py  uiuc_prop.py
backend/src/gorzen/db/: audit_repo.py  calibration_repo.py  catalog_repo.py  mission_repo.py  models.py  parameter_audit_repo.py  prediction_repo.py  session.py  telemetry_repo.py  twin_repo.py
backend/src/gorzen/models/: airframe.py  avionics.py  base.py  battery.py  comms.py  compute.py  environment.py  fuel_system.py  propulsion.py
backend/src/gorzen/models/perception/: gsd.py  identification.py  image_quality.py  motion_blur.py  niirs_tasks.py  rolling_shutter.py
backend/src/gorzen/photogrammetry/: __init__.py  gsd.py
backend/src/gorzen/schemas/: catalog.py  envelope.py  mission.py  parameter.py  subsystems.py  twin_graph.py  validation_result.py
backend/src/gorzen/services/: airspace.py  flight_log.py  mavlink_mission_coords.py  mavlink_telemetry.py  mavsdk_connection.py  mission_export.py  mission_planner.py  mission_validator.py  model_selector.py  preflight.py  px4_params.py  risk.py  solar.py  terrain.py  weather.py  wind_field.py
backend/src/gorzen/solver/: chance_constraints.py  coverage.py  envelope_solver.py  errors.py  hierarchical.py  mission_planner.py  trajectory.py  vtol_energy.py
backend/src/gorzen/uq/: distributions.py  errors.py  monte_carlo.py  pce.py  propagation.py  unscented.py
backend/src/gorzen/validation/: __init__.py  assumption_audit.py  computation_audit.py  parameter_resolver.py  parameter_validator.py  pyodm_client.py
benchmarks/: benchmark_envelope.py
docs/: ARCHITECTURE.md  AUDIT_REMEDIATION.md  CRITICAL_GAPS.md  ENTERPRISE_BACKLOG.md  EXISTING_MODULES_RESEARCH.md  FORMULA_AUDIT.md  OUTPUT_AUDIT.md  ROADMAP.md  V2_ARCHITECTURE.md  integration-opportunities.md  model-chain-flowchart-print.html  model-chain-flowchart.md  telemetry.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  openapi.d.ts
frontend/src/data/: aircraft.ts  environmentSnapshot.ts  missions.ts
frontend/src/hooks/: useEnvelope.ts  (+2 more)
ros/: Dockerfile
ros/gorzen_bridge/: package.xml  setup.cfg  setup.py
ros/gorzen_bringup/: CMakeLists.txt  package.xml
ros/gorzen_bringup/config/: sitl_params.yaml
ros/gorzen_bringup/launch/: bridge_only.launch.py  sitl.launch.py
ros/gorzen_msgs/: CMakeLists.txt  package.xml
ros/gorzen_msgs/msg/: LegPrediction.msg  MissionPlan.msg  MissionPredictions.msg  MissionProgress.msg  MissionStatus.msg  PreflightHealth.msg  TelemetryFrame.msg  ValidationResult.msg  Waypoint.msg
ros/gorzen_msgs/srv/: StartRecording.srv  StopRecording.srv  UploadMission.srv
scripts/: dev-backend.ps1  dev-backend.sh  dev-frontend.ps1  dev-frontend.sh  run_sitl_mission_check.ps1
tests/backend/: __init__.py  conftest.py  test_cross_model_integration.py  test_envelope.py  test_envelope_overrides.py  test_formulas_reference.py  test_inspection_mission.py  test_integration_optional.py  test_mission_validate_contract.py  test_models.py  test_p0_remediation.py  test_phase1_mavlink_px4.py  test_phase1_vtol_and_params.py  test_phase2_services_failfast.py  test_phase2_solver_failfast.py  test_phase2_uq_failfast.py  test_phase3_airspace.py  test_phase3_observability.py  test_phase3_preflight.py  test_phase3_risk.py  test_phase3_vtol_energy.py  test_phase3_wind_routing.py  test_phase4_golden_mode_decode.py  test_phase4_property_routing.py  test_property_hypothesis.py  test_sitl_mission_optional.py  test_turbulence_altitude_units.py  test_uncertainty_validation.py  test_uq_failure_semantics.py  test_uq_remediation.py
(+42 files in other folders)
