[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gorzen"
version = "0.1.0"
description = "Digital-Twin Platform for VTOL Fleet Configuration and Perception-Constrained Autonomous Mission Planning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "numpy>=1.26",
    "scipy>=1.14",
    "casadi>=3.6",
    "scikit-learn>=1.5",
    "pyulog>=1.0",
    "pymavlink>=2.4",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gorzen"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
