[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gorzen"
version = "0.1.0"
description = "Digital-Twin Platform for VTOL Fleet Configuration and Perception-Constrained Autonomous Mission Planning"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",
    "structlog>=24.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.14",
    "casadi>=3.6",
    "scikit-learn>=1.5",
    "pyulog>=1.0",
    "pymavlink>=2.4",
    "pyserial>=3.5",
    "websockets>=14.0",
    "mavsdk>=2.0",
    "ortools>=9.0",
    "pint>=0.23",
]

[project.optional-dependencies]
coverage = ["drone-flightplan>=1.0", "geojson>=3.0", "shapely>=2.0", "pyproj>=3.0"]
odm = ["pyodm>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "hypothesis>=6.0",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gorzen"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
addopts = "-v --tb=short"

# Unit tests hit models, envelope solver, core schemas, and UQ — not API/DB/services.
# Omit paths that need integration tests so --cov-fail-under matches this suite.
[tool.coverage.run]
source = ["src/gorzen"]
omit = [
    "*/gorzen/api/*",
    "*/gorzen/calibration/*",
    "*/gorzen/config.py",
    "*/gorzen/data/*",
    "*/gorzen/db/*",
    "*/gorzen/services/*",
    "*/gorzen/schemas/catalog.py",
    "*/gorzen/schemas/mission.py",
    "*/gorzen/schemas/validation_result.py",
    "*/gorzen/solver/coverage.py",
    "*/gorzen/solver/mission_planner.py",
    "*/gorzen/solver/trajectory.py",
    "*/gorzen/uq/pce.py",
    "*/gorzen/uq/propagation.py",
    "*/gorzen/uq/unscented.py",
    "*/gorzen/validation/assumption_audit.py",
    "*/gorzen/validation/computation_audit.py",
    "*/gorzen/validation/parameter_resolver.py",
    "*/gorzen/validation/pyodm_client.py",
    "*/gorzen/models/perception/niirs_tasks.py",
]
